Project hamed_bank_project {
  database_type: 'PostgreSQL'
  Note: '''
    # Hamed Bank Database
  '''
}
Table users as U {
  username varchar [pk]
  hashed_password varchar [not null]
  full_name varchar [not null]
  email varchar [not null, unique]
  is_email_verified bool [not null, default:false]
  password_changed_at timestamp [not null, default: '0001-01-01 00:00:00Z']
  created_at timestamp [not null,default:`now()`]
}
Table verify_emails{
  id bigserial
  username varchar [ref: > U.username, not null]
  email varchar [not null]
  secret_code varchar [not null]
  is_user bool [not null, default:false]
  created_at timestamp [not null,default:`now()`]
  expired_at timestamp [not null,default:`now() + interval '15 minutes'`]
}
Table accounts as A {
  id bigserial [pk]
  owner varchar [ref: > U.username, not null]
  balance bigint [not null]
  curreny varchar [not null]
  created_at timestamp [not null,default:`now()`]
  Indexes {
    owner
    (owner,curreny) [unique]
  }
}

Table entries {
  id bigserial [pk]
  account_id bigint [ref: > A.id, not null]
  amount bigint [not null,note:'can be negative or positive']
  created_at timestamp [not null,default:`now()`]
    Indexes {
    account_id
  }
}

Table transfers {
  id bigserial [pk]
  from_account_id bigint [ref: > A.id, not null]
  to_account_id bigint [ref: > A.id, not null]
  amount bigint [not null , note: 'always positive']
  created_at timestamp [not null,default:`now()`]
    Indexes {
    from_account_id
    to_account_id
    (from_account_id,to_account_id)
  }
}
Table sessions {
  id uuid [pk]
  username varchar [ref: > U.username, not null]
  refresh_token varchar [not null]
  user_agent varchar [not null]
  client_ip varchar [not null]
  is_blocked boolean [not null, default:false]
  expires_at timestamp [not null]
  created_at timestamp [not null,default:`now()`]

}
